--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     redis:
       image: redis:alpine
       container_name: docker-redis
+      networks:
+        - default
 
     mysql:
       image: mysql:5.7
@@ -15,6 +17,8 @@ services:
         - MYSQL_ROOT_PASSWORD=secret
       ports:
         - "8002:3306"
+      networks:
+        - default
 
     webserver:
       image: nginx:alpine
@@ -24,7 +28,9 @@ services:
           - .:/app
           - ./nginx:/etc/nginx/conf.d
       ports:
-       - "8000:80"
+        - "8000:80"
+      networks:
+        - default
 
     php-fpm:
       build: ./php-fpm
@@ -32,5 +38,10 @@ services:
       working_dir: /app
       volumes:
         - .:/app
-        - ./php-fpm/php-ini-overrides.ini:/etc/php/7.2/fpm/conf.d/99-overrides.ini
+        - ./php-fpm/php-ini-overrides.ini:/usr/local/etc/php/conf.d/overrides.ini
+      networks:
+        - default
+
+networks:
+  default:
 
