--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,9 +3,9 @@ server {
     #server_name test.test
     client_max_body_size 108M;
 
-    access_log /app/logs/default_access.log;
-    #error_log /app/logs/default_error.log;
-    root /app/www/default;
+    access_log /app/logs/default_access.log combined;
+    error_log /app/logs/default_error.log;
+    root /app/www/default/public;
     index index.php index.html;
 
     if (!-e $request_filename) {
@@ -21,5 +21,4 @@ server {
         fastcgi_buffer_size 32k;
         include fastcgi_params;
     }
-    
 }
