--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         - default
 
     mysql:
-      image: mysql:5.7
+      image: daocloud.io/library/mysql:5.7
       container_name: docker-mysql
       working_dir: /app
       volumes:
